Setting up boilerplate React stuff

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,1 +1,5 @@
-<%= javascript_pack_tag 'hello_react' %>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<!-- The React App is going to look for a #root div to attach to -->
+<div id="root"></div>
+<!-- Load the React app -->
+<%= javascript_pack_tag 'index' %>
