--- a/app/views/static/login.html.erb
+++ b/app/views/static/login.html.erb
@@ -1,34 +1,13 @@
-<h1>Login Page</h1>
-
-<%= link_to "Log in with Learn", "/auth/learn" %>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 text-center bootstrap-welcome">
-      <h1>Bootstrap 4 Works!</h1>
-      <p class="lead">Go ahead and build your awesome app now.</p>
-      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-        Launch demo modal
-      </button>
+<div class="container mt-5">
+  <div class="row pt-5">
+    <div class="col-sm-12 text-center pb-3">
+      <h1>Learn-co Groups</h1>
     </div>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+    <div class="col-sm-12 text-center">
+      <p class="lead">Groups Students in a Smart Way</p>
+    </div>
+    <div class="col-sm-12 text-center pt-3">
+      <a class="btn btn-primary btn-lg" href="/auth/learn" role="button">Login</a>
     </div>
   </div>
 </div>
